day05_modules-vpc/modules/security_group/main.tf
resource "aws_security_group" "ec2_sg" {

  name        = "${var.environment}-ec2-sg"
  description = "EC2 Security Group"
  vpc_id      = var.vpc_id




  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {

    description = "HTTP"

    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.environment}-ec2-sg"

  }

}
